--- a/module3/the_weather_here_exercises/package.json
+++ b/module3/the_weather_here_exercises/package.json
@@ -4,7 +4,7 @@
   "description": "This is a version of 'weather here' app by Joey Lee.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,5 +19,8 @@
     "express": "^4.16.4",
     "nedb": "^1.8.0",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
